--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- ── EDIT HERE: Page title & meta ── -->
-  <title>CoreForge v3 · Dinesh Kumar Mohanta</title>
+  <title>CoreForge · Portfolio · DKM</title>
   <meta name="description" content="Portfolio of Dinesh Kumar Mohanta — Java Backend Developer, Bhubaneswar, India.">
   <meta name="author"      content="Dinesh Kumar Mohanta">
 
