--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
       <li><a href="#projects">Projects</a></li>
       <li><a href="#certifications">Certs</a></li>
       <li><a href="#education">Education</a></li>
+      <li><a href="#coreforge">CoreForge</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
 
